# ERA

./: .dockerignore  .env.example  .env.local.example  .env.paas.example  .env.standalone.example  .gitignore  .secrets.local.example  24x7.bat  AUTONOMOUS.bat  DEPLOY.bat  DEPLOY_CLOUD.bat  ERA.bat  GETTING_STARTED.ru.md  GO.bat  MONETIZE.bat  Makefile  README.md  RUN24x7.bat  SECURITY.md  SETUP-PRODUCTION.bat  SHARE.bat  STATUS.bat  SYNC-VERCEL.bat  VERIFY-PRODUCTION.bat  docker-compose.yml  pyproject.toml  pytest.ini  render-full.yaml  render.yaml  vercel.json
.github/: dependabot.yml
api/: index.py  requirements.txt
backend/: Dockerfile  README_DEPLOY.md  celery_client.py  config.py  database.py  docker-entrypoint.sh  email_utils.py  health_service.py  llm_service.py  logging_config.py  main.py  middleware.py  models.py  presentation.py  pro_service.py  production.docker-compose.yml  public_result.py  pytest.ini  rate_limit.py  repository.py  requirements.txt  runtime.py  schemas.py  steganography.py  verify_messages.py  verify_service.py
docs/: MONETIZATION.ru.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: autonomous-status.ps1  bootstrap-owner-secrets.ps1  deploy-all-oci.ps1  deploy-paas.ps1  deploy-render-lite.ps1  e2e-standalone.ps1  ensure-docker.ps1  generate-prod-env.ps1  generate-prod-env.sh  init-local-db.ps1  install-auto-start.ps1  install-startup-shortcut.ps1  oci-open-firewall.sh  oci-resume.ps1  oracle-cloud-bootstrap.sh  oracle-cloud-prep.ps1  paas-prep.ps1  product-ready.ps1  (+29 more)
(+71 files in other folders)
