[project]
name = "era"
version = "0.4.0"
description = "ERA — Steganographic Historical Artifacts SaaS"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:.*httpx.*starlette.testclient.*:Warning",
    "ignore::DeprecationWarning:starlette.testclient",
]
